...
  const val BOTTOM_BAR = "BottomBar"
  const val CAMERA_BUTTON = "CameraButton"
  const val GARDEN_BUTTON = "GardenButton"
  const val FEED_BUTTON = "FeedButton"
  const val CAMERA_SCREEN = "CameraScreen"
  const val GARDEN_ACHIEVEMENTS_PARENT_SCREEN = "GardenAchievementsParentScreen"
  const val INTERNAL_GARDEN_SCREEN = "InternalGardenScreen"
  const val INTERNAL_ACHIEVEMENTS_SCREEN = "InternalAchievementsGardenScreen"
  const val FEED_SCREEN = "FeedScreen"
  const val EDIT_PLANT_SCREEN = "EditPlantScreen"
  const val ADD_FRIEND_SCREEN = "AddFriendScreen"
  const val FRIENDS_REQUESTS_SCREEN = "FriendsRequestsScreen"
}

