...
import androidx.compose.ui.text.style.TextAlign
import androidx.compose.ui.unit.dp
import androidx.compose.ui.window.Dialog
import com.android.mygarden.R

object PopupScreenTestTags {
  const val CARD = "Card"
  const val TITLE = "Title"
  const val DISMISS_BUTTON = "DismissButton"
  const val CONFIRM_BUTTON = "ConfirmButton"
}

/** Dimensions used for the popups across the app */
...
